# Mahdi-27-5v2

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: r4-r12-gate.yml
arabic_engine/: __init__.py
arabic_engine/communicative/: __init__.py  closure.py  khabar_insha.py  stylistic.py
arabic_engine/composition/: __init__.py  asnadi.py  closure.py  roles.py  tadmini.py  taqyidi.py
arabic_engine/contracts/: __init__.py  adjacency.py  anti_jump.py  invariants.py  state_mapping.py
arabic_engine/core/: __init__.py  enums.py  enums_domain.py  enums_gate.py  enums_judgement.py  enums_language.py  enums_semantic.py  enums_singular.py  enums_trace.py  enums_weight.py  types.py  types_composition.py  types_gate.py  types_judgement.py  types_language.py  types_semantic.py  types_singular.py  types_trace.py  types_weight.py
arabic_engine/foundational/: __init__.py  contracts.py  integration.py  (+3 more)
docs/: README.md  core_refactor_map_v1.md  ready_for_controlled_semantic_expansion_executive_decision_v1.md  semantic_kernel_architecture_v1.md  software_architecture_risk_register_v1.md
tests/: test_additional_coverage.py  test_chain.py  test_communicative.py  test_contracts.py  test_coverage_gaps.py  test_foundational_contracts.py  test_foundational_integration_hooks.py  test_foundational_ontological.py  test_foundational_symbolic.py  test_language.py  test_qiyas.py  test_reference_predication_interface.py  test_semantic_integration.py  test_semantic_kernel.py  test_semantic_phases.py  test_sigma2.py  test_singular.py  test_trace.py  test_weight.py
(+91 files in other folders)
